// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenuSubButton Snapshot Tests should match snapshot with active state 1`] = `
<a
  aria-current="page"
  class="mat-mdc-list-item flex h-7 min-w-0 items-center gap-2 overflow-hidden rounded-md px-2 hover:bg-gray-200 dark:hover:bg-gray-700 active:bg-gray-300 dark:active:bg-gray-600 focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&>span:last-child]:truncate [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 bg-gray-300 dark:bg-gray-600 text-sm group-data-[collapsible=icon]:hidden"
  data-active="true"
  data-sidebar="menu-sub-button"
  data-size="md"
  data-slot="sidebar-menu-sub-button"
  data-testid="sidebar-menu-sub-button"
  href="#"
>
  Sub Menu Item
</a>
`;

exports[`SidebarMenuSubButton Snapshot Tests should match snapshot with default props 1`] = `
<a
  class="mat-mdc-list-item flex h-7 min-w-0 items-center gap-2 overflow-hidden rounded-md px-2 hover:bg-gray-200 dark:hover:bg-gray-700 active:bg-gray-300 dark:active:bg-gray-600 focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&>span:last-child]:truncate [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 text-sm group-data-[collapsible=icon]:hidden"
  data-active="false"
  data-sidebar="menu-sub-button"
  data-size="md"
  data-slot="sidebar-menu-sub-button"
  data-testid="sidebar-menu-sub-button"
  href="#"
>
  Sub Menu Item
</a>
`;

exports[`SidebarMenuSubButton Snapshot Tests should match snapshot with small size 1`] = `
<a
  class="mat-mdc-list-item flex h-7 min-w-0 items-center gap-2 overflow-hidden rounded-md px-2 hover:bg-gray-200 dark:hover:bg-gray-700 active:bg-gray-300 dark:active:bg-gray-600 focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&>span:last-child]:truncate [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 text-xs group-data-[collapsible=icon]:hidden"
  data-active="false"
  data-sidebar="menu-sub-button"
  data-size="sm"
  data-slot="sidebar-menu-sub-button"
  data-testid="sidebar-menu-sub-button"
  href="#"
>
  Sub Menu Item
</a>
`;
